public enum UserType {
    DOCTOR,
    REGISTRATION
}
